Added: 'box-sizing: border-box' for all elements.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -6,11 +6,16 @@
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
+ * 3. Border-box so elements don't change their designated size.
  */
 
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+*{
+  box-sizing: border-box;
 }
 
 /* Sections
